Update layout to prevent squishing media

--- a/wagtailio/static/sass/components/_text-media.scss
+++ b/wagtailio/static/sass/components/_text-media.scss
@@ -8,9 +8,7 @@
         padding: 10px 10px 0 0;
 
         @include media-query(medium) {
-            grid-column: 2/ span 2;
-            grid-row: 1;
-            padding: 0 40px 0 0;
+            padding: 35px 0 0 0;
         }
 
         @include media-query(large) {
@@ -34,21 +32,17 @@
         margin: auto;
 
         @include media-query(medium) {
-            grid-column: 4;
-            padding: 0 40px 0 0;
+            height: 300px;
         }
+
         @include media-query(large) {
+            height: 100%;
             grid-column: 5 / span 2;
         }
     }
 
     &--right {
         #{$root}__content {
-            @include media-query(medium) {
-                grid-column: 3 / span 2;
-                padding: 0 0 0 40px;
-            }
-
             @include media-query(large) {
                 grid-column: 4 / span 3;
                 padding: 0 0 0 95px;
@@ -59,11 +53,6 @@
         iframe {
             padding: 0 10px 0 0;
         
-            @include media-query(medium) {
-                grid-column: 2;
-                padding: 0 40px 0 0;
-            }
-
             @include media-query(large) {
                 grid-column: 2 / span 2;
             }
